--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/pngimg.com - letter_k_PNG72.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Add these lines in your index.html inside <head> tag -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-okaidia.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-java.min.js"></script>
   <style>html{background-color:#222330}</style><link rel="stylesheet" href="styles.6583d2f6cadba712.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.6583d2f6cadba712.css"></noscript></head>
   <body>
     <app-root></app-root>
-  <script src="runtime.a257313dbe7a38cb.js" type="module"></script><script src="polyfills.fb3c248435639964.js" type="module"></script><script src="main.25ad781d48232a9a.js" type="module"></script>
+  <script src="runtime.a257313dbe7a38cb.js" type="module"></script><script src="polyfills.fb3c248435639964.js" type="module"></script><script src="main.0e63d5241454f967.js" type="module"></script>
 
 </body></html>
